jvm 19 + maven fixes